# LiquidDemocracy

./: CMakeLists.txt  README.md  main.cpp  node.cpp  node.h  votes_counter.cpp  votes_counter.h  votes_counter_unittests.cpp
